@@ -28,7 +28,7 @@ input#generator_limit		{color:#000; background-color:#fff; padding:8px 3px; bord
 #view_search_test		{margin:0 auto; width:960px; padding:30px 0 40px 0;}
 input#view_search_string, input#view_search_string_only, input.typeahead.tt-hint	{font-size:30px; width:936px; height:48px; border:0; margin-top:10px;}
 .search_wrap			{display:inline-block; width:290px; margin-bottom:15px; min-height:50px;}
-.search_wrap:nth-of-type(3n+3)	{margin-left:20px; margin-right:20px;}
+.search_wrap.mid		{margin-left:20px; margin-right:20px;}
 .search_label			{font-size:14px; padding-bottom:5px; margin-right:23px; line-height:1.2em; text-transform:uppercase;}
 td.filter_title img,
 .search_label img		{padding-right:7px; width:14px; height:14px;}
