@@ -1,3 +1,8 @@
+Development Portal (2019-11-12 shi)
+==============================
+Add default-finance-type search test
+
+
 Development Portal (2019-11-11 shi)
 ==============================
 Add new search test page
